--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 hs_err_pid*
 /aula_2_Hello_Word/nbproject/private/
 /aula_2_Hello_Word/build/
+/Aula3JavaEEServlets/nbproject/private/
+/Aula3JavaEEServlets/build/
