Aula_3-Atividade_JavaEE

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ hs_err_pid*
 /aula_2_Hello_Word/build/
 /Aula3JavaEEServlets/nbproject/private/
 /Aula3JavaEEServlets/build/
+/Aula_3_Atividade/nbproject/private/
+/Aula_3_Atividade/build/
