--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ hs_err_pid*
 /Aula3JavaEEServlets/build/
 /Aula_3_Atividade/nbproject/private/
 /Aula_3_Atividade/build/
+/Aula_4_Atividade/nbproject/private/
+/Aula_4_Atividade/build/
