--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ hs_err_pid*
 /Aula_3_Atividade/build/
 /Aula_4_Atividade/nbproject/private/
 /Aula_4_Atividade/build/
+/Aula_5_JavaEEJSP/nbproject/private/
+/Aula_5_JavaEEJSP/build/
