--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ hs_err_pid*
 /Aula_4_Atividade/build/
 /Aula_5_JavaEEJSP/nbproject/private/
 /Aula_5_JavaEEJSP/build/
+/JavaEEJSP_Calendar/nbproject/private/
+/JavaEEJSP_Calendar/build/
