--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ hs_err_pid*
 /Aula_5_JavaEEJSP/build/
 /JavaEEJSP_Calendar/nbproject/private/
 /JavaEEJSP_Calendar/build/
+/Aula6JSPIncludes/nbproject/private/
+/Aula_6_Atividade_Tabela_Price/nbproject/private/
+/Aula_6_Atividade_Tabela_Price/build/
