--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ hs_err_pid*
 /Aula6JSPIncludes/nbproject/private/
 /Aula_6_Atividade_Tabela_Price/nbproject/private/
 /Aula_6_Atividade_Tabela_Price/build/
+/teste/nbproject/private/
+/teste/build/
+/Aula_7_Atividade/nbproject/private/
+/Aula_7_Atividade/build/
