--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ hs_err_pid*
 /teste/build/
 /Aula_7_Atividade/nbproject/private/
 /Aula_7_Atividade/build/
+/treino/nbproject/private/
+/treino/build/
+/Aula_7_Context/nbproject/private/
