--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ hs_err_pid*
 /Aula_7_Context/nbproject/private/
 /prova_poo/nbproject/private/
 /prova_poo/build/
+/Aula08P1/nbproject/private/
+/Aula08P1/build/
+/Aula08_P1/nbproject/private/
+/Aula08_P1/build/
