carga de exercícios

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@ hs_err_pid*
 /Aula08P1/build/
 /Aula08_P1/nbproject/private/
 /Aula08_P1/build/
+/Aula11POO/nbproject/private/
+/Aula11POO/build/
+/prova_poo/dist/
+/Aula11POO/dist/
+/Aula08P1/dist/
