--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ hs_err_pid*
 /Aula11POO/dist/
 /Aula08P1/dist/
 /Aula11_Atividade/nbproject/private/
+/Aula12jdbc/nbproject/private/
+/Aula12jdbc/build/
