--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ hs_err_pid*
 /Aula11_Atividade/nbproject/private/
 /Aula12jdbc/nbproject/private/
 /Aula12jdbc/build/
+/WebParking/nbproject/private/
+/Aula_15_JDBC_Tasks/nbproject/private/
+/Aula_15_JDBC_Tasks/build/
+/teste1/nbproject/private/
+/prova_2_poo/nbproject/private/
+/prova_2_poo/build/
