--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ hs_err_pid*
 /teste1/nbproject/private/
 /prova_2_poo/nbproject/private/
 /prova_2_poo/build/
+/exame_poo/nbproject/private/
+/exame_poo/build/
